--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,7 @@
             ></path>
             <polyline points="22,6 12,13 2,6"></polyline>
           </svg>
-          <a href="mailto:gpbaijpur@gmail.com">gpbaijpur@gmail.com</a>
+          <a href="mailto:gpbhitiprincipal@gmail.com">gpbhitiprincipal@gmail.com</a>
         </div>
 
         <div class="language-container">
@@ -314,10 +314,10 @@
             Shri Ashish Patel, Minister of Technical Education, U.P.
           </li>
           <li>
-            Shri Subhash Chand Sharma, Principal Secretary, Technical Education
+            Mr. Narendra Bhooshan, Principal Secretary, Technical Education
           </li>
           <li>
-            Mr. Madan Mishra, Principal, Government Polytechnic Baijpur Bhiti
+            Mr. Suresh Kumar Basant, Principal, Government Polytechnic Baijpur Bhiti
           </li>
         </ul>
       </div>
@@ -328,7 +328,7 @@
           <li>Eco-friendly campus spread over 6.5 acres</li>
           <li>Digital classrooms</li>
           <li>Well-equipped laboratories</li>
-          <li>Separate hostel accommodations for boys and girls</li>
+          <li>Separate hostel accommodations for girls</li>
           <li>On-campus mess facility</li>
           <li>Green and clean learning environment</li>
         </ul>
@@ -338,8 +338,8 @@
         <h4>Diploma Courses Offered</h4>
         <ul>
           <li>Civil Engineering</li>
-          <li>Mechanical Engineering</li>
-          <li>Textile Technology</li>
+          <li>Mechanical Engineering (Production)</li>
+          <li>Electrical Engineering</li>
         </ul>
         <p>
           Admissions are conducted through the Joint Entrance Examination Council Uttar Pradesh (JEECUP), a state-level entrance exam ensuring merit-based selection.
@@ -524,7 +524,7 @@
                   ></path>
                   <polyline points="22,6 12,13 2,6"></polyline>
                 </svg>
-                <p>gpbaijpur@gmail.com</p>
+                <p>gpbhitiprincipal@gmail.com</p>
               </div>
             </div>
           </div>
