--- a/feedback.html
+++ b/feedback.html
@@ -30,7 +30,7 @@
             ></path>
             <polyline points="22,6 12,13 2,6"></polyline>
           </svg>
-          <a href="mailto:gpbaijpur@gmail.com">gpbaijpur@gmail.com</a>
+          <a href="mailto:gpbhitiprincipal@gmail.com">gpbhitiprincipal@gmail.com</a>
         </div>
 
         <div class="language-container">
@@ -283,7 +283,7 @@
                     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                     <polyline points="22,6 12,13 2,6"></polyline>
                   </svg>
-                  <p>gpbaijpur@gmail.com</p>
+                  <p>gpbhitiprincipal@gmail.com</p>
                 </div>
 
                 <div class="contact-item-gps">
@@ -461,7 +461,7 @@
                   ></path>
                   <polyline points="22,6 12,13 2,6"></polyline>
                 </svg>
-                <p>gpbaijpur@gmail.com</p>
+                <p>gpbhitiprincipal@gmail.com</p>
               </div>
             </div>
           </div>
