--- a/gallery.html
+++ b/gallery.html
@@ -513,7 +513,7 @@
                   ></path>
                   <polyline points="22,6 12,13 2,6"></polyline>
                 </svg>
-                <p>gpbaijpur@gmail.com</p>
+                <p>gpbhitiprincipal@gmail.com</p>
               </div>
             </div>
           </div>
