--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             ></path>
             <polyline points="22,6 12,13 2,6"></polyline>
           </svg>
-          <a href="mailto:gpbaijpur@gmail.com">gpbaijpur@gmail.com</a>
+          <a href="mailto:gpbhiyiprincipal@gmail.com">gpbhitiprincipal@gmail.com</a>
         </div>
 
         <div class="language-container">
@@ -92,7 +92,7 @@
         </div>
 
         <div class="contact-social">
-          <div class="phone">
+          <!-- <div class="phone">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -110,7 +110,7 @@
               ></path>
             </svg>
             05273-252012
-          </div>
+          </div>-->
           <div class="social-icons">
             <a href="#" title="Facebook">
               <svg
@@ -625,7 +625,7 @@
                   ></path>
                   <polyline points="22,6 12,13 2,6"></polyline>
                 </svg>
-                <p>gpbaijpur@gmail.com</p>
+                <p>gpbhitiprincipal@gmail.com</p>
               </div>
             </div>
           </div>
