--- a/mechanical.html
+++ b/mechanical.html
@@ -29,7 +29,7 @@
             ></path>
             <polyline points="22,6 12,13 2,6"></polyline>
           </svg>
-          <a href="mailto:gpbaijpur@gmail.com">gpbaijpur@gmail.com</a>
+          <a href="mailto:gpbhitiprincipal@gmail.com">gpbhitiprincipal@gmail.com</a>
         </div>
 
         <div class="language-container">
@@ -729,7 +729,7 @@
                   ></path>
                   <polyline points="22,6 12,13 2,6"></polyline>
                 </svg>
-                <p>gpbaijpur@gmail.com</p>
+                <p>gpbhitiprincipal@gmail.com</p>
               </div>
             </div>
           </div>
