--- a/syllabus.html
+++ b/syllabus.html
@@ -34,7 +34,7 @@
             ></path>
             <polyline points="22,6 12,13 2,6"></polyline>
           </svg>
-          <a href="mailto:gpbaijpur@gmail.com">gpbaijpur@gmail.com</a>
+          <a href="mailto:gpbhitiprincipal@gmail.com">gpbhitiprincipal@gmail.com</a>
         </div>
 
         <div class="language-container">
@@ -1149,7 +1149,7 @@
                   ></path>
                   <polyline points="22,6 12,13 2,6"></polyline>
                 </svg>
-                <p>gpbaijpur@gmail.com</p>
+                <p>gpbhitiprincipal@gmail.com</p>
               </div>
             </div>
           </div>
