--- a/mission.html
+++ b/mission.html
@@ -314,10 +314,10 @@
             Shri Ashish Patel, Minister of Technical Education, U.P.
           </li>
           <li>
-            Shri Subhash Chand Sharma, Principal Secretary, Technical Education
+            Mr. Narendra Bhooshan, Principal Secretary, Technical Education
           </li>
           <li>
-            Mr. Madan Mishra, Principal, Government Polytechnic Baijpur Bhiti
+            Mr. Suresh Kumar Basant, Principal, Government Polytechnic Baijpur Bhiti
           </li>
         </ul>
       </div>
@@ -328,7 +328,7 @@
           <li>Eco-friendly campus spread over 6.5 acres</li>
           <li>Digital classrooms</li>
           <li>Well-equipped laboratories</li>
-          <li>Separate hostel accommodations for boys and girls</li>
+          <li>Separate hostel accommodations for girls</li>
           <li>On-campus mess facility</li>
           <li>Green and clean learning environment</li>
         </ul>
@@ -339,7 +339,7 @@
         <ul>
           <li>Civil Engineering</li>
           <li>Mechanical Engineering</li>
-          <li>Textile Technology</li>
+          <li>Electrical Engineering</li>
         </ul>
         <p>
           Admissions are conducted through the Joint Entrance Examination Council Uttar Pradesh (JEECUP), a state-level entrance exam ensuring merit-based selection.
