--- a/civil.html
+++ b/civil.html
@@ -290,7 +290,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> 14108amit@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9140263126</p>
+                  <!-- <p><strong>Phone:</strong> +91 9140263126</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac001">
                   View Profile
@@ -312,7 +312,7 @@
                 <p class="faculty-qualification">B.TECH</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong>Satyendra110@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7985704038</p>
+                  <!-- <p><strong>Phone:</strong> +91 7985704038</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac002">
                   View Profile
@@ -336,7 +336,30 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong>sonalikamauryagov@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7210652128</p>
+                  <!-- <p><strong>Phone:</strong> +91 7210652128</p> -->
+                </div>
+                <button class="view-profile-btn" data-id="fac003">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+                        <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/civil/"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Ashish Kumar</h3>
+                <p class="faculty-designation">Lecturer Civil</p>
+                <p class="faculty-qualification">
+                  M.tech (Transportation engineering)
+                </p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong>bteashish@gmail.com</p>
+                  <!-- <p><strong>Phone:</strong> +91 7210652128</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac003">
                   View Profile
@@ -349,6 +372,28 @@
         <!-- Mechanical Engineering Faculty -->
         <div class="faculty-pane" id="mechanical">
           <div class="faculty-grid">
+
+
+                        <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/mechanical/ashutosh.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mrs. Nandini Singh</h3>
+                <p class="faculty-designation">H.O.D (Mechanical Engineering) </p>
+                <!-- <p class="faculty-qualification">BTech</p> -->
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong>nandinivanisingh@gmail.com</p>
+                  <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
@@ -363,7 +408,7 @@
                 <p class="faculty-qualification">BE(Mechanical Engineeeing)</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> 2255abdullahalig@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7275343235</p>
+                  <!-- <p><strong>Phone:</strong> +91 7275343235</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -371,27 +416,6 @@
               </div>
             </div>
 
-            <!-- Faculty Card 2 -->
-            <div class="faculty-card">
-              <div class="faculty-image">
-                <img
-                  src="images/placeholder-profile.jpg"
-                  alt="Faculty Member"
-                />
-              </div>
-              <div class="faculty-info">
-                <h3>Mr. Mohd Ahamad</h3>
-                <p class="faculty-designation">Lecturer Mechanical</p>
-                <p class="faculty-qualification">M.Tech</p>
-                <div class="faculty-contact">
-                  <p><strong>Email:</strong> meet.ahamad@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9958470800</p>
-                </div>
-                <button class="view-profile-btn" data-id="fac102">
-                  View Profile
-                </button>
-              </div>
-            </div>
 
             <!-- faculty card 3-->
 
@@ -408,7 +432,7 @@
                 <p class="faculty-qualification">BTech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> ashurajmmmec@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 6388458630</p>
+                  <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -431,7 +455,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> anandm468@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7985055390</p>
+                  <!-- <p><strong>Phone:</strong> +91 7985055390</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -454,7 +478,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> tiwariatul392@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7530972922</p>
+                  <!-- <p><strong>Phone:</strong> +91 7530972922</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -462,26 +486,6 @@
               </div>
             </div>
 
-            <div class="faculty-card">
-              <div class="faculty-image">
-                <img
-                  src="images/mechanical/ashutosh.jpg"
-                  alt="Faculty Member"
-                />
-              </div>
-              <div class="faculty-info">
-                <h3>Mr. Ashutosh Kumar</h3>
-                <p class="faculty-designation">Lecturer Mechanical</p>
-                <p class="faculty-qualification">BTech</p>
-                <div class="faculty-contact">
-                  <p><strong>Email:</strong> ashurajmmmec@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 6388458630</p>
-                </div>
-                <button class="view-profile-btn" data-id="fac102">
-                  View Profile
-                </button>
-              </div>
-            </div>
 
             <div class="faculty-card">
               <div class="faculty-image">
@@ -496,7 +500,7 @@
                 <p class="faculty-qualification">M Tech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> amarnathchauhan497@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7859859003</p>
+                  <!-- <p><strong>Phone:</strong> +91 7859859003</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -523,7 +527,7 @@
                 <p class="faculty-qualification">B. E.</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> rakesh29993@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9340106433</p>
+                  <!-- <p><strong>Phone:</strong> +91 9340106433</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -545,7 +549,7 @@
                 <p class="faculty-qualification">Btech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> ambrishpal7@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7987757504</p>
+                  <!-- <p><strong>Phone:</strong> +91 7987757504</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -566,7 +570,7 @@
                 <p class="faculty-qualification">M.Tech.</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> rakeshmkr720042@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7839237042</p>
+                  <!-- <p><strong>Phone:</strong> +91 7839237042</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -587,7 +591,7 @@
                 <p class="faculty-qualification">M.TECH</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> tufailee@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9889383900</p>
+                  <!-- <p><strong>Phone:</strong> +91 9889383900</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -615,7 +619,7 @@
                 <p class="faculty-qualification">MSc , NET</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> awanisln1991@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9450731629</p>
+                  <!-- <p><strong>Phone:</strong> +91 9450731629</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -637,7 +641,7 @@
                 <p class="faculty-qualification">M.Sc. , Ph.D , NET</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> manojau.87@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9452535325</p>
+                  <!-- <p><strong>Phone:</strong> +91 9452535325</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -658,7 +662,7 @@
                 <p class="faculty-qualification">M.A.</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> riteshsmith1@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9336814849</p>
+                  <!-- <p><strong>Phone:</strong> +91 9336814849</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
