--- a/civil.html
+++ b/civil.html
@@ -29,7 +29,9 @@
             ></path>
             <polyline points="22,6 12,13 2,6"></polyline>
           </svg>
-          <a href="mailto:gpbhitiprincipal@gmail.com">gpbhitiprincipal@gmail.com</a>
+          <a href="mailto:gpbhitiprincipal@gmail.com"
+            >gpbhitiprincipal@gmail.com</a
+          >
         </div>
 
         <div class="language-container">
@@ -265,9 +267,7 @@
         <button class="dept-tab" data-dept="textile">
           Electrical Engineering
         </button>
-        <button class="dept-tab" data-dept="applied">
-          Applied Department
-        </button>
+        <button class="dept-tab" data-dept="applied">Applied Department</button>
       </div>
 
       <div class="faculty-container">
@@ -277,10 +277,7 @@
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/civil/amitsingh.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/civil/amitsingh.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Amit Singh</h3>
@@ -301,10 +298,7 @@
             <!-- Faculty Card 2 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/civil/sateyendra.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/civil/sateyendra.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Satyendra Pratap Singh</h3>
@@ -344,12 +338,9 @@
               </div>
             </div>
 
-                        <div class="faculty-card">
+            <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/civil/"
-                  alt="Faculty Member"
-                />
+                <img src="images/civil/" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Ashish Kumar</h3>
@@ -372,18 +363,15 @@
         <!-- Mechanical Engineering Faculty -->
         <div class="faculty-pane" id="mechanical">
           <div class="faculty-grid">
-
-
-                        <div class="faculty-card">
+            <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/mechanical/ashutosh.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/mechanical/nandini.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mrs. Nandini Singh</h3>
-                <p class="faculty-designation">H.O.D (Mechanical Engineering) </p>
+                <p class="faculty-designation">
+                  H.O.D (Mechanical Engineering)
+                </p>
                 <!-- <p class="faculty-qualification">BTech</p> -->
                 <div class="faculty-contact">
                   <p><strong>Email:</strong>nandinivanisingh@gmail.com</p>
@@ -415,7 +403,6 @@
                 </button>
               </div>
             </div>
-
 
             <!-- faculty card 3-->
 
@@ -485,7 +472,6 @@
                 </button>
               </div>
             </div>
-
 
             <div class="faculty-card">
               <div class="faculty-image">
@@ -559,10 +545,7 @@
 
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/electrical/"
-                  alt="Faculty Member"
-                />
+                <img src="images/electrical/" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Rakesh</h3>
@@ -608,10 +591,7 @@
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/applied/awani.png"
-                  alt="Faculty Member"
-                />
+                <img src="images/applied/awani.png" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mrs. Awani kumari</h3>
@@ -630,10 +610,7 @@
             <!-- Faculty Card 2 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/applied/manojkumar.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/applied/manojkumar.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Manoj Kumar Jaiswal</h3>
