--- a/mechanical.html
+++ b/mechanical.html
@@ -29,7 +29,9 @@
             ></path>
             <polyline points="22,6 12,13 2,6"></polyline>
           </svg>
-          <a href="mailto:gpbhitiprincipal@gmail.com">gpbhitiprincipal@gmail.com</a>
+          <a href="mailto:gpbhitiprincipal@gmail.com"
+            >gpbhitiprincipal@gmail.com</a
+          >
         </div>
 
         <div class="language-container">
@@ -180,8 +182,16 @@
           <li>
             <a href="#">AICTE</a>
             <div class="dropdown-content">
-              <a target="_blank" href="https://www.aicte-india.org/bureaus/approval/approval-process-2025-26">Approvals</a>
-              <a target="_blank" href="https://aicte-india.org/bureaus/administration/rules-regulations">Guidelines</a>
+              <a
+                target="_blank"
+                href="https://www.aicte-india.org/bureaus/approval/approval-process-2025-26"
+                >Approvals</a
+              >
+              <a
+                target="_blank"
+                href="https://aicte-india.org/bureaus/administration/rules-regulations"
+                >Guidelines</a
+              >
               <!-- <a href="#">Mandatory Disclosures</a> -->
             </div>
           </li>
@@ -228,14 +238,15 @@
             </div>
           </li>
           <li><a href="#">Alumni</a></li>
-          <li><a href="#">Contact us</a>
+          <li>
+            <a href="#">Contact us</a>
             <div class="dropdown-content">
-                <a href="/address.html">Address</a>
-                <a href="/mapLocation.html">Maps & Location</a>
-                <a href="/phoneDirectory.html">Phone Directory</a>
-                <a href="/feedback.html">Feedback/Query</a>
-              </div>
-        </li>
+              <a href="/address.html">Address</a>
+              <a href="/mapLocation.html">Maps & Location</a>
+              <a href="/phoneDirectory.html">Phone Directory</a>
+              <a href="/feedback.html">Feedback/Query</a>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
@@ -247,31 +258,24 @@
       </div>
 
       <div class="department-tabs">
-        <button class="dept-tab " data-dept="civil">
-          Civil Engineering
-        </button>
+        <button class="dept-tab" data-dept="civil">Civil Engineering</button>
         <button class="dept-tab active" data-dept="mechanical">
           Mechanical Engineering(Production)
         </button>
         <button class="dept-tab" data-dept="textile">
           Electrical Engineering
         </button>
-        <button class="dept-tab" data-dept="applied">
-          Applied Department
-        </button>
+        <button class="dept-tab" data-dept="applied">Applied Department</button>
       </div>
 
       <div class="faculty-container">
         <!-- Civil Engineering Faculty -->
-        <div class="faculty-pane " id="civil">
+        <div class="faculty-pane" id="civil">
           <div class="faculty-grid">
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/civil/amitsingh.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/civil/amitsingh.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Amit Singh</h3>
@@ -281,7 +285,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> 14108amit@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9140263126</p>
+                  <!-- <p><strong>Phone:</strong> +91 9140263126</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac001">
                   View Profile
@@ -292,10 +296,7 @@
             <!-- Faculty Card 2 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/civil/sateyendra.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/civil/sateyendra.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Satyendra Pratap Singh</h3>
@@ -303,7 +304,7 @@
                 <p class="faculty-qualification">B.TECH</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong>Satyendra110@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7985704038</p>
+                  <!-- <p><strong>Phone:</strong> +91 7985704038</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac002">
                   View Profile
@@ -327,7 +328,27 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong>sonalikamauryagov@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7210652128</p>
+                  <!-- <p><strong>Phone:</strong> +91 7210652128</p> -->
+                </div>
+                <button class="view-profile-btn" data-id="fac003">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img src="images/civil/" alt="Faculty Member" />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Ashish Kumar</h3>
+                <p class="faculty-designation">Lecturer Civil</p>
+                <p class="faculty-qualification">
+                  M.tech (Transportation engineering)
+                </p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong>bteashish@gmail.com</p>
+                  <!-- <p><strong>Phone:</strong> +91 7210652128</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac003">
                   View Profile
@@ -340,6 +361,26 @@
         <!-- Mechanical Engineering Faculty -->
         <div class="faculty-pane active" id="mechanical">
           <div class="faculty-grid">
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img src="images/mechanical/nandini.jpg" alt="Faculty Member" />
+              </div>
+              <div class="faculty-info">
+                <h3>Mrs. Nandini Singh</h3>
+                <p class="faculty-designation">
+                  H.O.D (Mechanical Engineering)
+                </p>
+                <!-- <p class="faculty-qualification">BTech</p> -->
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong>nandinivanisingh@gmail.com</p>
+                  <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
@@ -354,7 +395,7 @@
                 <p class="faculty-qualification">BE(Mechanical Engineeeing)</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> 2255abdullahalig@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7275343235</p>
+                  <!-- <p><strong>Phone:</strong> +91 7275343235</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -362,50 +403,6 @@
               </div>
             </div>
 
-            <!-- Faculty Card 2 -->
-            <div class="faculty-card">
-              <div class="faculty-image">
-                <img
-                  src="images/mechanical/"
-                  alt="Faculty Member"
-                />
-              </div>
-              <div class="faculty-info">
-                <h3>Mr. Mohd Ahamad</h3>
-                <p class="faculty-designation">Lecturer Mechanical</p>
-                <p class="faculty-qualification">M.Tech</p>
-                <div class="faculty-contact">
-                  <p><strong>Email:</strong> meet.ahamad@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9958470800</p>
-                </div>
-                <button class="view-profile-btn" data-id="fac102">
-                  View Profile
-                </button>
-              </div>
-            </div>
-
-            <!-- faculty card 3-->
-
-            <div class="faculty-card">
-              <div class="faculty-image">
-                <img
-                  src="images/mechanical/ashutosh.jpg"
-                  alt="Faculty Member"
-                />
-              </div>
-              <div class="faculty-info">
-                <h3>Mr. Ashutosh Kumar</h3>
-                <p class="faculty-designation">Lecturer Mechanical</p>
-                <p class="faculty-qualification">BTech</p>
-                <div class="faculty-contact">
-                  <p><strong>Email:</strong> ashurajmmmec@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 6388458630</p>
-                </div>
-                <button class="view-profile-btn" data-id="fac102">
-                  View Profile
-                </button>
-              </div>
-            </div>
 
             <div class="faculty-card">
               <div class="faculty-image">
@@ -422,7 +419,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> anandm468@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7985055390</p>
+                  <!-- <p><strong>Phone:</strong> +91 7985055390</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -445,7 +442,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> tiwariatul392@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7530972922</p>
+                  <!-- <p><strong>Phone:</strong> +91 7530972922</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -466,7 +463,7 @@
                 <p class="faculty-qualification">BTech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> ashurajmmmec@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 6388458630</p>
+                  <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -487,7 +484,7 @@
                 <p class="faculty-qualification">M Tech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> amarnathchauhan497@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7859859003</p>
+                  <!-- <p><strong>Phone:</strong> +91 7859859003</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -514,7 +511,7 @@
                 <p class="faculty-qualification">B. E.</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> rakesh29993@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9340106433</p>
+                  <!-- <p><strong>Phone:</strong> +91 9340106433</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -536,7 +533,7 @@
                 <p class="faculty-qualification">Btech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> ambrishpal7@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7987757504</p>
+                  <!-- <p><strong>Phone:</strong> +91 7987757504</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -546,10 +543,7 @@
 
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/electrical/"
-                  alt="Faculty Member"
-                />
+                <img src="images/electrical/" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Rakesh</h3>
@@ -557,7 +551,7 @@
                 <p class="faculty-qualification">M.Tech.</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> rakeshmkr720042@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7839237042</p>
+                  <!-- <p><strong>Phone:</strong> +91 7839237042</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -578,7 +572,7 @@
                 <p class="faculty-qualification">M.TECH</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> tufailee@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9889383900</p>
+                  <!-- <p><strong>Phone:</strong> +91 9889383900</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -588,18 +582,14 @@
           </div>
         </div>
 
-
-                <!-- Applied Department Faculty -->
+        <!-- Applied Department Faculty -->
 
         <div class="faculty-pane" id="applied">
           <div class="faculty-grid">
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/applied/awani.png"
-                  alt="Faculty Member"
-                />
+                <img src="images/applied/awani.png" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mrs. Awani kumari</h3>
@@ -607,7 +597,7 @@
                 <p class="faculty-qualification">MSc , NET</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> awanisln1991@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9450731629</p>
+                  <!-- <p><strong>Phone:</strong> +91 9450731629</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -618,10 +608,7 @@
             <!-- Faculty Card 2 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/applied/manojkumar.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/applied/manojkumar.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Manoj Kumar Jaiswal</h3>
@@ -629,7 +616,7 @@
                 <p class="faculty-qualification">M.Sc. , Ph.D , NET</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> manojau.87@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9452535325</p>
+                  <!-- <p><strong>Phone:</strong> +91 9452535325</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -650,7 +637,7 @@
                 <p class="faculty-qualification">M.A.</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> riteshsmith1@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9336814849</p>
+                  <!-- <p><strong>Phone:</strong> +91 9336814849</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -689,9 +676,7 @@
                   <h4>GOVERNMENT POLYTECHNIC BAIJPUR BHITI</h4>
                   <div>
                     <p>
-                      <strong
-                        >Baijpur Bhiti, Ambedkarnagar - 224151</strong
-                      >
+                      <strong>Baijpur Bhiti, Ambedkarnagar - 224151</strong>
                     </p>
                   </div>
                 </div>
