--- a/applied.html
+++ b/applied.html
@@ -265,6 +265,27 @@
         <!-- Civil Engineering Faculty -->
         <div class="faculty-pane " id="civil">
           <div class="faculty-grid">
+
+
+                        <div class="faculty-card">
+              <div class="faculty-image">
+                <img src="images/civil/" alt="Faculty Member" />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Ashish Kumar</h3>
+                <p class="faculty-designation">Lecturer Civil</p>
+                <p class="faculty-qualification">
+                  M.tech (Transportation engineering)
+                </p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong>bteashish@gmail.com</p>
+                  <!-- <p><strong>Phone:</strong> +91 7210652128</p> -->
+                </div>
+                <button class="view-profile-btn" data-id="fac003">
+                  View Profile
+                </button>
+              </div>
+            </div>
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
@@ -281,7 +302,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> 14108amit@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9140263126</p>
+                  <!-- <p><strong>Phone:</strong> +91 9140263126</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac001">
                   View Profile
@@ -303,7 +324,7 @@
                 <p class="faculty-qualification">B.TECH</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong>Satyendra110@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7985704038</p>
+                  <!-- <p><strong>Phone:</strong> +91 7985704038</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac002">
                   View Profile
@@ -327,7 +348,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong>sonalikamauryagov@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7210652128</p>
+                  <!-- <p><strong>Phone:</strong> +91 7210652128</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac003">
                   View Profile
@@ -340,6 +361,27 @@
         <!-- Mechanical Engineering Faculty -->
         <div class="faculty-pane" id="mechanical">
           <div class="faculty-grid">
+
+
+                        <div class="faculty-card">
+              <div class="faculty-image">
+                <img src="images/mechanical/nandini.jpg" alt="Faculty Member" />
+              </div>
+              <div class="faculty-info">
+                <h3>Mrs. Nandini Singh</h3>
+                <p class="faculty-designation">
+                  H.O.D (Mechanical Engineering)
+                </p>
+                <!-- <p class="faculty-qualification">BTech</p> -->
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong>nandinivanisingh@gmail.com</p>
+                  <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
@@ -354,7 +396,7 @@
                 <p class="faculty-qualification">BE(Mechanical Engineeeing)</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> 2255abdullahalig@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7275343235</p>
+                  <!-- <p><strong>Phone:</strong> +91 7275343235</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -362,50 +404,7 @@
               </div>
             </div>
 
-            <!-- Faculty Card 2 -->
-            <div class="faculty-card">
-              <div class="faculty-image">
-                <img
-                  src="images/placeholder-profile.jpg"
-                  alt="Faculty Member"
-                />
-              </div>
-              <div class="faculty-info">
-                <h3>Mr. Mohd Ahamad</h3>
-                <p class="faculty-designation">Lecturer Mechanical</p>
-                <p class="faculty-qualification">M.Tech</p>
-                <div class="faculty-contact">
-                  <p><strong>Email:</strong> meet.ahamad@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9958470800</p>
-                </div>
-                <button class="view-profile-btn" data-id="fac102">
-                  View Profile
-                </button>
-              </div>
-            </div>
 
-            <!-- faculty card 3-->
-
-            <div class="faculty-card">
-              <div class="faculty-image">
-                <img
-                  src="images/mechanical/ashutosh.jpg"
-                  alt="Faculty Member"
-                />
-              </div>
-              <div class="faculty-info">
-                <h3>Mr. Ashutosh Kumar</h3>
-                <p class="faculty-designation">Lecturer Mechanical</p>
-                <p class="faculty-qualification">BTech</p>
-                <div class="faculty-contact">
-                  <p><strong>Email:</strong> ashurajmmmec@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 6388458630</p>
-                </div>
-                <button class="view-profile-btn" data-id="fac102">
-                  View Profile
-                </button>
-              </div>
-            </div>
 
             <div class="faculty-card">
               <div class="faculty-image">
@@ -422,7 +421,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> anandm468@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7985055390</p>
+                  <!-- <p><strong>Phone:</strong> +91 7985055390</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -445,7 +444,7 @@
                 </p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> tiwariatul392@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7530972922</p>
+                  <!-- <p><strong>Phone:</strong> +91 7530972922</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -466,7 +465,7 @@
                 <p class="faculty-qualification">BTech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> ashurajmmmec@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 6388458630</p>
+                  <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -487,7 +486,7 @@
                 <p class="faculty-qualification">M Tech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> amarnathchauhan497@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7859859003</p>
+                  <!-- <p><strong>Phone:</strong> +91 7859859003</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -514,7 +513,7 @@
                 <p class="faculty-qualification">B. E.</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> rakesh29993@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9340106433</p>
+                  <!-- <p><strong>Phone:</strong> +91 9340106433</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -536,7 +535,7 @@
                 <p class="faculty-qualification">Btech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> ambrishpal7@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7987757504</p>
+                  <!-- <p><strong>Phone:</strong> +91 7987757504</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -557,7 +556,7 @@
                 <p class="faculty-qualification">M.Tech.</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> rakeshmkr720042@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 7839237042</p>
+                  <!-- <p><strong>Phone:</strong> +91 7839237042</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -578,7 +577,7 @@
                 <p class="faculty-qualification">M.TECH</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> tufailee@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9889383900</p>
+                  <!-- <p><strong>Phone:</strong> +91 9889383900</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -606,7 +605,7 @@
                 <p class="faculty-qualification">MSc , NET</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> awanisln1991@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9450731629</p>
+                  <!-- <p><strong>Phone:</strong> +91 9450731629</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac101">
                   View Profile
@@ -628,7 +627,7 @@
                 <p class="faculty-qualification">M.Sc. , Ph.D , NET</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> manojau.87@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9452535325</p>
+                  <!-- <p><strong>Phone:</strong> +91 9452535325</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
@@ -649,7 +648,7 @@
                 <p class="faculty-qualification">M.A.</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> riteshsmith1@gmail.com</p>
-                  <p><strong>Phone:</strong> +91 9336814849</p>
+                  <!-- <p><strong>Phone:</strong> +91 9336814849</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
                   View Profile
